# llm-codegen-research

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
llm_cgr/: __init__.py
llm_cgr/api/: __init__.py  api_utils.py
llm_cgr/md/: __init__.py  classes.py
src/llm_cgr/: __init__.py  decorators.py  defaults.py  json_utils.py
src/llm_cgr/analyse/: __init__.py  classes.py
src/llm_cgr/analyse/languages/: __init__.py  code_data.py  javascript.py  python.py  rust.py
src/llm_cgr/api/: api_utils.py  prompts.py
src/llm_cgr/llm/: __init__.py  generate.py  llm_base.py  llm_clients.py  protocol.py
src/llm_cgr/llm/clients/: __init__.py  anthropic.py  base.py  custom.py  deepseek.py  google.py  mistral.py  nscale.py  openai.py  openai_tool.py  protocol.py  qwen.py  together.py
src/llm_cgr/md/: classes.py
src/llm_cgr/query/: __init__.py  api_utils.py  completion.py  prompts.py  protocol.py
tests/: conftest.py  test_analyse.py  test_enums.py  test_llm.py  test_llm_api.py  test_llm_deepseek_reasoning.py  test_llm_local.py  test_llm_tool.py  test_utils.py
tests/test_analyse/: test_javascript.py  test_rust.py
tests/test_reasoning/: test_anthropic.py  test_mistral.py  test_together.py
