# Package specification, as defined here:
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[build-system]
requires = ["setuptools", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "llm_cgr"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]  # todo: dynamic "version" later
description = "Utilities for use when research code-generation by LLMs."
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["llm", "code-generation", "research", "prompting", "nlp"]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.lock"]}
optional-dependencies.dev = { file = ["requirements-dev.txt"] }

[project.urls]
Homepage = "https://github.com/itsluketwist/llm-codegen-research"
